--- a/templates/hospital/doctor_dashboard_cards.html
+++ b/templates/hospital/doctor_dashboard_cards.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>CareSewa - HMS</title>
 
   <style media="screen">
     .market-update-block {
@@ -177,10 +177,6 @@
     <div class="clearfix"> </div>
   </div>
 </body>
-<!--
-  developed By : sumit kumar
-  facebook : fb.com/sumit.luv
-  youtube : youtube.com/lazycoders
-  -->
+
 
 </html>
