--- a/templates/hospital/patient_dashboard_cards.html
+++ b/templates/hospital/patient_dashboard_cards.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>CareSewa - HMS</title>
 
   <style media="screen">
     .market-update-block {
@@ -226,13 +226,6 @@
     </div>
     <div class="clearfix"> </div>
   </div>
-
-  <!--
-    developed By : sumit kumar
-    facebook : fb.com/sumit.luv
-    youtube : youtube.com/lazycoders
-    -->
-
 
 </body>
 
