--- a/templates/hospital/adminlogin.html
+++ b/templates/hospital/adminlogin.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>LazyCoder || sumit</title>
+  <title>CareSewa - HMS</title>
 
 
   <style type="text/css">
@@ -56,7 +56,6 @@
   <br>
   <br><br>
 
-  <!--- login page for admin by admin(sumit)  ---------->
   <form method="post">
     {% csrf_token %}
     <div class="container register-form">
@@ -91,12 +90,7 @@
   </form>
 
   <br><br><br>
-  <!--
-  developed By : sumit kumar
-  facebook : fb.com/sumit.luv
-  youtube : youtube.com/lazycoders
-  -->
-
+ 
   {% include "hospital/footer.html" %}
 </body>
 
