--- a/templates/hospital/admin_view_patient.html
+++ b/templates/hospital/admin_view_patient.html
@@ -42,7 +42,13 @@
       {% for p in patients %}
       <tr>
         <td> {{p.get_name}}</td>
-        <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+        <td>
+          {% if p.profile_pic %}
+              <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" />
+          {% else %}
+              <img src="{% static 'images/patient.jpg' %}" alt="Default Profile Pic" height="40px" width="40px" />
+          {% endif %}
+      </td>
         <td>{{p.symptoms}}</td>
         <td>{{p.mobile}}</td>
         <td>{{p.address}}</td>
