--- a/templates/hospital/doctor_view_patient.html
+++ b/templates/hospital/doctor_view_patient.html
@@ -40,6 +40,7 @@
       <thead>
         <tr>
           <th>Name</th>
+          <th>Age</th>
           <th>Profile Picture</th>
           <th>Symptoms</th>
           <th>Mobile</th>
@@ -50,6 +51,7 @@
       {% for p in patients %}
       <tr>
         <td> {{p.get_name}}</td>
+        <td>{{p.age}}/{{p.gender}}</td>
         <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
         <td>{{p.symptoms}}</td>
         <td>{{p.mobile}}</td>
