--- a/templates/hospital/patient_dashboard.html
+++ b/templates/hospital/patient_dashboard.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 {%include 'hospital/patient_dashboard_cards.html'%}
+{% include 'hospital/recommended_doctors.html' %}
 <br><br><br><br>
 
 
