--- a/templates/hospital/footer.html
+++ b/templates/hospital/footer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html>
 
 <head>
@@ -73,4 +73,4 @@
 </footer>
 
 
-</html>
+</html> {% endcomment %}
