--- a/templates/hospital/navbar.html
+++ b/templates/hospital/navbar.html
@@ -11,7 +11,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <style type="text/css">
-    .bs-example {
+    /* .bs-example {
       margin: 0px;
 
     }
@@ -20,14 +20,145 @@
       font-size: 20px;
       font-family: sans-serif;
 
+    } */
+
+/* Navbar */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #003366; /* Deep Blue */
+    color: white;
+    position: relative;
+    padding-bottom: 1px;
+   
+}
+
+.navbar .logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+.navbar .logo h1 a{
+    font-size: 40px;
+    font-weight: bold;
+    color: #97adcf;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.navbar .logo p {
+    font-size: 16px;
+    color: #A9D8D1; /* Light Blue */
+    font-style: italic;
+}
+
+.navbar .nav-links {
+    list-style: none;
+    display: flex;
+}
+
+.navbar .nav-links li {
+    margin: 0 15px;
+}
+
+.navbar .nav-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    transition: color 0.3s;
+}
+
+.navbar .nav-links a:hover {
+    color: #A9D8D1;
+}
+/* Hamburger Menu */
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.hamburger-menu span {
+    width: 30px;
+    height: 4px;
+    background-color: white;
+    margin: 6px 0;
+}
+
+/* Mobile Navbar */
+@media screen and (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
     }
+
+    .navbar .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #003366;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        padding: 20px;
+    }
+
+    .navbar .nav-links.active {
+        display: flex;
+    }
+
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .hamburger-menu.active span:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .hamburger-menu.active span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger-menu.active span:nth-child(3) {
+        transform: rotate(-45deg) translate(5px, -5px);
+    }
+}
+
+
   </style>
 </head>
 
 <body>
+  <nav class="navbar">
+    <div class="logo">
+      
+        <h1><a href="/">CareSewa</a></h1>
+        <!-- <h1>CareSewa</h1> -->
+        <p>Health Made Easier</p>
+    </div>
+    <div class="hamburger-menu" id="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <ul class="nav-links" id="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="#">Live Consultation</a></li>
+        <li><a href="#">Instant Consultation</a></li>
+        <li><a href="/patientclick">Book Appointment</a></li>
+        <li><a href="/patientlogin">Login</a></li>
+        <li><a href="#">Sign Up</a></li>
+    </ul>
+</nav>
 
 
-
+<!-- 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#337AB7;">
       <a href="/" class="navbar-brand">Hospital Management</a>
@@ -52,7 +183,8 @@
 
       </div>
     </nav>
-  </div>
+
+  </div> -->
 
 
 </body>
