--- a/templates/hospital/patientclick.html
+++ b/templates/hospital/patientclick.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 
+<style>
+  .jumbotron{
+    margin: auto;
+    max-width: 50vw;
+    align-items: center;
+    text-align: center;
+  }
+  
+
+</style>
 <br>
 <br>
 
