--- a/templates/hospital/doctor_base.html
+++ b/templates/hospital/doctor_base.html
@@ -49,7 +49,7 @@
     }
 
     .menu {
-      background: #5bc995;
+      background: #3e2daa94;
       height: 100vh;
       width: 240px;
       position: fixed;
@@ -71,6 +71,7 @@
       box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.2);
     }
     .menu .avatar h2 {
+      font-size: 35px;
       font-weight: normal;
       margin-bottom: 0;
     }
@@ -240,7 +241,7 @@
   <main>
     <!-- nav start -->
     <div class="bs-example">
-      <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background:#337AB7;">
+      <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background:#564e89;">
         <a href="/doctor-dashboard" class="navbar-brand">HOSPITAL MANAGEMENT</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
