--- a/templates/hospital/patient_base.html
+++ b/templates/hospital/patient_base.html
@@ -99,7 +99,7 @@
     }
 
     .menu {
-      background: #5bc995;
+      background: #5b81c9db;
       height: 100vh;
       width: 240px;
       position: fixed;
@@ -114,7 +114,7 @@
       text-align: center;
     }
     .menu .avatar img {
-      width: 100px;
+      width: 130px;
       border-radius: 50%;
       overflow: hidden;
       border: 4px solid #ffea92;
@@ -151,10 +151,14 @@
     .menu ul li.icon-calendar {
       background-image: url("http://www.entypo.com/images//calendar.svg");
     }
+    .menu .avatar h6{
+      font-size: 18px;
+    }
 
     .menu ul li:hover {
       background-color: rgba(0, 0, 0, 0.1);
     }
+
     .menu ul li:focus {
       outline: none;
     }
@@ -292,8 +296,8 @@
   <main>
     <!-- nav start -->
     <div class="bs-example">
-      <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background:#337AB7;">
-        <a href="/patient-dashboard" class="navbar-brand">HOSPITAL MANAGEMENT</a>
+      <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background:#003366;">
+        <a href="/patient-dashboard" class="navbar-brand">CareSewa</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -317,18 +321,15 @@
     <br><br><br><br><br><br><br>
     <footer>
       <p>
-        <a id="ftr" href="https://facebook.com/sumit.luv/" class="fa fa-facebook"></a>
-        <a id="ftr" href="https://api.whatsapp.com/send?phone=919572181024&text=Hello%20Sumit.%0d%0aHow%20are%20you%20%3f%0d%0aI%20came%20from%20your%20website.&source=&data=#" class="fa fa-whatsapp"></a>
-        <a id="ftr" href="https://instagram.com/sumit.luv" class="fa fa-instagram"></a>
-        <a id="ftr" href="https://twitter.com/sumitkumar1503" class="fa fa-twitter"></a>
+       
       </p>
       <br>
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12">
             {% comment %} <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
-              <p>Made in India <br>
-                Copyright &copy; 2020 LazyCoder </p>
+              <p>Made in Nepal <br>
+                Copyright &copy; 2025 NNS </p>
             </div> {% endcomment %}
           </div>
         </div>
