--- a/templates/hospital/admin_base.html
+++ b/templates/hospital/admin_base.html
@@ -101,7 +101,7 @@
     }
 
     .menu {
-      background: #5bc995;
+      background: #3d1da1b0;
       height: 100vh;
       width: 240px;
       position: fixed;
@@ -130,6 +130,9 @@
       list-style: none;
       padding: 0.5em 0;
       margin: 0;
+    }
+    .avatar h6{
+      font-size:30px;
     }
     .menu ul li {
       padding: 0.5em 1em 0.5em 3em;
@@ -276,6 +279,8 @@
 
 <body>
 
+
+  
   <!-- partial:index.partial.html -->
   <nav class="menu" tabindex="0">
     <div class="smartphone-menu-trigger"></div>
@@ -298,8 +303,8 @@
 
     <!-- nav start -->
     <div class="bs-example">
-      <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background:#337AB7;">
-        <a href="/admin-dashboard" class="navbar-brand">HOSPITAL MANAGEMENT</a>
+      <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background:#3A1078;">
+        <a href="/admin-dashboard" class="navbar-brand">CareSewa</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
         </button>
