--- a/templates/hospital/admin_dashboard_cards.html
+++ b/templates/hospital/admin_dashboard_cards.html
@@ -31,7 +31,7 @@
     }
 
     .market-update-block.clr-block-1 {
-      background: #ff0000;
+      background: #4E31AA;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
@@ -41,7 +41,7 @@
     }
 
     .market-update-block.clr-block-2 {
-      background: #FC8213;
+      background: #3A1078;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
@@ -51,13 +51,14 @@
     }
 
     .market-update-block.clr-block-3 {
-      background: #1355f9;
+      background: #3795BD;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
     }
+    
 
     .market-update-block.clr-block-1:hover {
       background: #3C3C3C;
