--- a/templates/hospital/adminclick.html
+++ b/templates/hospital/adminclick.html
@@ -6,6 +6,16 @@ youtube : youtube.com/lazycoders
 -->
 {% block content %}
 
+<style>
+  .jumbotron{
+    margin: auto;
+    max-width: 50vw;
+    align-items: center;
+    text-align: center;
+  }
+  
+
+</style>
 <br>
 <br>
 
