--- a/templates/hospital/doctor_dashboard_cards.html
+++ b/templates/hospital/doctor_dashboard_cards.html
@@ -31,23 +31,25 @@
     }
 
     .market-update-block.clr-block-1 {
-      background: #ff0000;
+      background: #1A5598;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
+      border-radius: 15px;
     }
 
     .market-update-block.clr-block-2 {
-      background: #FC8213;
+      background: #625cce;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
+      border-radius: 15px;
     }
 
     .market-update-block.clr-block-3 {
@@ -57,6 +59,7 @@
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
+      border-radius: 15px;
     }
 
     .market-update-block.clr-block-1:hover {
