--- a/templates/hospital/doctor_wait_for_approval.html
+++ b/templates/hospital/doctor_wait_for_approval.html
@@ -12,6 +12,12 @@
     .jumbotron {
       margin-top: 0px;
       margin-bottom: 0px;
+      
+     margin: auto;
+     max-width: 50vw;
+     align-items: center;
+     text-align: center;
+  
     }
 
     .jumbotron h1 {
@@ -37,7 +43,7 @@
     <hr class="my-4">
     <p>Check Later</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="hospital/home" role="button">Logout For Now</a>
+      <!-- <a class="btn btn-primary btn-lg" href="hospital/home" role="button">Logout For Now</a> -->
       <form method="post" action="{% url 'logout' %}">
         {% csrf_token %}
         <button type="submit" style="border-radius: 5px; padding: 5px;" >Logout</button>
@@ -47,10 +53,6 @@
 
   {% include "hospital/footer.html" %}
 </body>
-<!--
-developed By : sumit kumar
-facebook : fb.com/sumit.luv
-youtube : youtube.com/lazycoders
--->
+
 
 </html>
