--- a/templates/hospital/patient_dashboard_cards.html
+++ b/templates/hospital/patient_dashboard_cards.html
@@ -31,13 +31,15 @@
     }
 
     .market-update-block.clr-block-1 {
-      background: #ff0000;
+      background: #9b00ff;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
+      border-radius: 15px;
+      
     }
 
     .market-update-block.clr-block-2 {
@@ -48,6 +50,8 @@
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
+      border-radius: 15px;
+
     }
 
     .market-update-block.clr-block-3 {
@@ -57,6 +61,8 @@
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
+      border-radius: 15px;
+
     }
 
     .market-update-block.clr-block-1:hover {
