--- a/templates/hospital/patient_discharge.html
+++ b/templates/hospital/patient_discharge.html
@@ -120,7 +120,7 @@
         <table>
           <tr>
             <td class="title">
-              <h1>Hospital Management</h1>
+              <h1>CareSewa </h1>
             </td>
 
             <td>
@@ -239,7 +239,7 @@
 {%else%}
 <h5 style="text-align:center;">You Are Not Discharged By Hospital !</h5>
 <h5 style="text-align:center;">Your Treatment Is Going On !</h5><br><br>
-<h6 style="text-align:center;">When You Will Be Discahrged. You Can Download Invoice.</h6>
+<h6 style="text-align:center;">When You Will Be Discharged, You Can Download Invoice here.</h6>
 {%endif%}
 
 <br><br><br><br><br><br><br><br>
