--- a/templates/hospital/patientsignup.html
+++ b/templates/hospital/patientsignup.html
@@ -61,7 +61,7 @@
 
 
 
-  <!--- signup page for patient by admin(sumit)  ---------->
+  <!--- signup page for patient by admin  ---------->
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="container register-form">
@@ -79,9 +79,9 @@
               <div class="form-group">
                 {% render_field userForm.username class="form-control" placeholder="Username" %}
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 {% render_field patientForm.age class="form-control" pattern="^(?:[1-9]?[0-9]|100)$" placeholder="Age" %}
-              </div>
+              </div> -->
               <div class="form-group">
                 {% render_field patientForm.address class="form-control" placeholder="Address" %}
               </div>
@@ -100,14 +100,14 @@
               <div class="form-group">
                 {% render_field userForm.password class="form-control" placeholder="Password" %}
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label>Gender:</label>
                 {% for radio in patientForm.gender %}
                     <label for="{{ radio.id_for_label }}">{{ radio.choice_label }}</label>
                     {{ radio.tag }}
                 {% endfor %}
 
-              </div>
+              </div> -->
 
               
               <div class="form-group">
